# bfmc-gradient-copy

./: README.md  pyproject.toml  server.py
brain/: main.py
brain/src/data/CarsAndSemaphores/: processCarsAndSemaphores.py
brain/src/data/TrafficCommunication/: processTrafficCommunication.py
brain/src/data/TrafficCommunication/useful/: keyDealer.py
brain/src/hardware/serialhandler/: processSerialHandler.py
car/: main.py
nav/: __main__.py  crosswalk.py  lane.py  sign.py  warp.py
